data/derived/fa15/progs/unify/prog0656.ml.out
Characters 185-187:
  let (_, res) = List.fold_left fn base (List.rev 12) in 
                                                  ^^
Error: This expression has type int but an expression was expected of type
         'a list
